<resources>
    <string name="app_name">Reto</string>
    <string name="internet">INTERNET</string>
    <string name="imagen">IMAGEN</string>
    <string name="otro">OTRO</string>
    <string name="mate">MATE</string>
    <string name="web">Web</string>
    <string name="suma">+</string>
    <string name="resta">-</string>
    <string name="multiplicacion">x</string>
    <string name="division">/</string>
    <string name="clickea">clickea</string>
    <string name="todo">TODO</string>
    <string name="image">image</string>
</resources>
