<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MateActivity">

    <EditText
        android:id="@+id/entrada1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="198dp"
        android:layout_marginBottom="186dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/entrada2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/entrada2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="186dp"
        android:layout_marginBottom="257dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entrada1"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/botonsuma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="10dp"
        android:text="@string/suma"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/botonresta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botonresta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="163dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="99dp"
        android:text="@string/resta"
        app:layout_constraintBottom_toTopOf="@+id/entrada2"
        app:layout_constraintEnd_toStartOf="@+id/botonmulti"
        app:layout_constraintStart_toEndOf="@+id/botonsuma"
        app:layout_constraintTop_toBottomOf="@+id/entrada1" />

    <Button
        android:id="@+id/botonmulti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="163dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="99dp"
        android:text="@string/multiplicacion"
        app:layout_constraintBottom_toTopOf="@+id/entrada2"
        app:layout_constraintEnd_toStartOf="@+id/botondiv"
        app:layout_constraintStart_toEndOf="@+id/botonresta"
        app:layout_constraintTop_toBottomOf="@+id/entrada1" />

    <Button
        android:id="@+id/botondiv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="163dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="99dp"
        android:text="@string/division"
        app:layout_constraintBottom_toTopOf="@+id/entrada2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/botonmulti"
        app:layout_constraintTop_toBottomOf="@+id/entrada1" />

    <TextView
        android:id="@+id/salida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="615dp"
        android:layout_marginBottom="97dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>